# libvirt-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  opencode.json  pyproject.toml  server.py
docs/: plan.md  test-report.md  testing.md
libvirt_mcp/: __init__.py  app.py  bootstrap.py  common.py  connections.py  create_vm.py  delete_vm.py  domains.py  migration.py  models.py  remote.py  state.py
templates/: default.json  suse-leap-micro.json
tests/: test_create_vm.py  test_integration.py  test_migrate_vm.py  test_server.py
