[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libvirt-mcp"
version = "0.1.0"
description = "MCP server for managing VMs on remote libvirt hosts via SSH"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "libvirt-python>=10.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
libvirt-mcp = "server:mcp.run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["."]
